# dep-stac

./: Dockerfile  Find_Patch_STAC.ipynb  Find_Plot_STAC.ipynb  Makefile  README.md  create_collections.py  docker-compose.yaml  get_insert_items.py  get_items.py  get_upsert_items.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build-test-docker.yml  validate-collections.yml
collections/: dep_ls_geomad.json  dep_ls_wofl.json  dep_ls_wofs.json  dep_ls_wofs_summary_annual.json  dep_s1_geomad.json  dep_s1_mosaic.json  dep_s2_geomad.json  dep_s2_mangroves.json  dep_s2ls_intertidal.json  dep_s2s1_mrd.json
collections/production/: dep_ls_coastlines.json  dep_ls_fc.json  dep_ls_fc_summary_annual.json  dep_ls_geomad.json  dep_ls_wofl.json  dep_ls_wofs_summary_alltime.json  dep_ls_wofs_summary_annual.json  dep_s1_geomad.json  dep_s2_ammi.json  dep_s2_geomad.json  dep_s2_mangroves.json  dep_s2_sdb.json  dep_s2_seagrass.json  dep_s2_vegheight.json  dep_s2ls_intertidal.json  dep_s2s1_mrd.json
collections/staging/: dep_ls_coastlines.json  dep_ls_fc.json  dep_ls_geomad.json  (+15 more)
dep_collections/: dep_ls_coastlines.py  dep_ls_fc.py  dep_ls_fc_summary_annual.py  dep_ls_geomad.py  dep_ls_wofl.py  dep_ls_wofs.py  dep_ls_wofs_summary_alltime.py  dep_ls_wofs_summary_annual.py  dep_pdhhdx_population.py  dep_s1_geomad.py  dep_s1_mosaic.py  dep_s2_ammi.py  dep_s2_geomad.py  dep_s2_mangroves.py  dep_s2_ocm.py  dep_s2_sdb.py  dep_s2_seagrass.py  dep_s2_vegheight.py  dep_s2ls_intertidal.py  dep_s2s1_mrd.py  utils.py
stac_api/: app.py
tests/: test_collections.py
