[project]
name = "dep-stac"
version = "0.2.0"
description = "STAC API for Digital Earth Pacific"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0,<1",
    "pypgstac[psycopg]>=0.9.11,<1",
    "pystac[validation]>=1.15.1,<2",
    "s3fs>=2026.6.0,<2027",
    "stac-fastapi.api>=6.3.2,<7",
    "stac-fastapi.extensions>=6.3.2,<7",
    "stac-fastapi.pgstac>=6.3.1,<7",
    "starlette>=1.3.1,<2",
    "typer>=0.26.8,<1",
    "uvicorn>=0.49.0,<1",
]
[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
]
[tool.uv]
package = false
